TEST_PROGRAMS/VALID/05/3d_array_access.go
/* 3D array access. */

package main

var matrix3D [3][3][3] float64

func main() {
	matrix3D[0][1][2] = 1.
}
