TEST_PROGRAMS/INVALID/08/badAssignNumberofIds.go
package main;

func main() {
  var i int = 1;
  var j, k float = 1.0, 2.0;
  i,j = 1, 2.0, 3.0;
}
